syntax = "proto3";

package noticepb;

option go_package = "./;noticepb";

import "validate/validate.proto";
import "kratos_layout_user.proto";


message Notice{
  uint32 id = 1;
  string title = 2;
  string desc = 3;
  string unit = 4;
  string content = 5;
  uint32 created_at = 8;
  uint32 updated_at = 9;
}

message PageNoticeUserRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  uint32 notice_id = 3[(validate.rules).uint32 = {gt: 0}];
}

message PageNoticeUserReply{
  uint32 total = 1;
  repeated userpb.User list = 2;
}

message PageNoticeRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string title = 3;
}

message PageNoticeReply{
  uint32 total = 1;
  repeated Notice list = 2;
}

message AddNoticeRequest {
  string title = 1[(validate.rules).string = {min_len: 1}];
  string desc = 2[(validate.rules).string = {min_len: 1}];
  string unit = 3[(validate.rules).string = {min_len: 1}];
  string content = 4[(validate.rules).string = {min_len: 1}];
}

message AddNoticeReply {
  uint32 id = 1;
}

message GetNoticeRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}

message UpdateNoticeRequest {
  uint32 id = 5[(validate.rules).uint32 = {gt: 0}];
  string title = 1[(validate.rules).string = {min_len: 1}];
  string desc = 2[(validate.rules).string = {min_len: 1}];
  string unit = 3[(validate.rules).string = {min_len: 1}];
  string content = 4[(validate.rules).string = {min_len: 1}];
}

message DeleteNoticeRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}


